--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ http://www.templatemo.com/tm-487-fitness
         <div class="row">
 
             <div class="wow fadeInUp col-md-12 col-sm-12" data-wow-delay="1.3s">
-                <h2>our Trainers</h2>
+                <h2>MOVIES</h2>
                 <p>Lorem ipsum dolor sit amet, maecenas eget vestibulum justo.</p>
             </div>
 
