--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ http://www.templatemo.com/tm-487-fitness
 			<ul class="nav navbar-nav navbar-right main-navigation">
 				<li><a href="#home" class="smoothScroll">Home</a></li>
 				<li><a href="#overview" class="smoothScroll">About</a></li>
-				<li><a href="#trainer" class="smoothScroll">Trainers</a></li>
+				<li><a href="#Movies" class="smoothScroll">Trainers</a></li>
 				<li><a href="#blog" class="smoothScroll">Blog</a></li>
 				<li><a href="#price" class="smoothScroll">Prices</a></li>
 				<li><a href="#testimonial" class="smoothScroll">Testimonials</a></li>
@@ -104,14 +104,14 @@ http://www.templatemo.com/tm-487-fitness
 
 			<div class="col-md-6 col-sm-12">
 				<img src="images/overview-img.jpg" class="img-responsive" alt="Overview">
-				<blockquote class="wow fadeInUp" data-wow-delay="1.9s">Fitness is free website template that can be used for any company. You may download, modify and use this layout for your website.</blockquote>
+				<blockquote class="wow fadeInUp" data-wow-delay="1.9s"> ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam.</blockquote>
 			</div>
 
 			<div class="col-md-1"></div>
 
 			<div class="wow fadeInUp col-md-4 col-sm-12" data-wow-delay="1s">
 				<div class="overview-detail">
-					<h2>About Fitness</h2>
+					<h2>About Polo</h2>
 					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat.</p>
 					<p>Fitness web template includes total 2 pages. This is an index (main) page and another is a <a href="blog-single.html">blog page</a>.</p>
 					<a href="#trainer" class="btn btn-default smoothScroll">Let us begin</a>
@@ -143,9 +143,9 @@ http://www.templatemo.com/tm-487-fitness
                         <img src="images/trainer-img1.jpg" class="img-responsive" alt="Trainer">
                     </a>
                     <div class="rainer-overlay">
-											<!-- ^'rainer' instead of 'trainer' class so this unwanted functionily doesnt work' -->
+		<!-- ^'rainer' instead of 'trainer' class so this unwanted functionily doesnt work' -->
                         <div class="rainer-des">
-													<!-- ^'rainer' instead of 'trainer' class so this unwanted functionily doesnt work' -->
+		<!-- ^'rainer' instead of 'trainer' class so this unwanted functionily doesnt work' -->
                             <h2>DA NEW BALANCE BOYZ</h2>
                             <!-- <h3>Body Trainer</h3> -->
                             <ul class="social-icon">
@@ -217,7 +217,7 @@ http://www.templatemo.com/tm-487-fitness
 
 			<div class="wow fadeInUp col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10" data-wow-delay="0.9s">
 				<h2>Signup Newsletter</h2>
-				<p>Get discounts for your personal fitness and gym services now.</p>
+				<p>Get News on the Latest Movies.</p>
 				<div class="newsletter_detail">
 					<form action="#" method="post" id="newsletter-signup">
 						<div class="col-md-6 col-sm-6">
@@ -246,14 +246,14 @@ http://www.templatemo.com/tm-487-fitness
 		<div class="row">
 
 			<div class="col-md-12 col-sm-12 text-center">
-				<h2>Fitness Blog</h2>
+				<h2>Polo's Blog</h2>
 				<p>Lorem ipsum dolor sit amet, maecenas eget vestibulum justo.</p>
 			</div>
 
 			<div class="wow fadeInUp col-md-6 col-sm-12" data-wow-delay="0.9s">
 				<div class="blog-thumb">
 					<span class="blog-date">Body Fitness / July 2, 2016</span>
-					<h3 class="blog-title"><a href="blog-single.html">How to get a fitness model body?</a></h3>
+					<h3 class="blog-title"><a href="blog-single.html">How to get a movie ticket?</a></h3>
 					<h5 id="blog-author">by David Walker</h5>
 				</div>
 			</div>
@@ -261,7 +261,7 @@ http://www.templatemo.com/tm-487-fitness
 			<div class="wow fadeInUp col-md-6 col-sm-12" data-wow-delay="1.3s">
 				<div class="blog-thumb">
 					<span class="blog-date">Healthy Fit / June 8, 2016</span>
-					<h3 class="blog-title"><a href="blog-single.html">Personal Fitness Tips</a></h3>
+					<h3 class="blog-title"><a href="blog-single.html">Where are movies playing</a></h3>
 					<h5 id="blog-author">by George</h5>
 				</div>
 			</div>
@@ -399,7 +399,7 @@ http://www.templatemo.com/tm-487-fitness
 		<div class="row">
 
 			<div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="0.6s">
-				<h2>About Fitness</h2>
+				<h2>About Polo</h2>
 				<p>Nunc id turpis tincidunt dui volutpat hendrerit et efficitur dolor. Morbi quis tempor felis, ut dictum ipsum. Praesent venenatis rutrum interdum.</p>
 			</div>
 
