--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ http://www.templatemo.com/tm-487-fitness
 
 			<div class="wow fadeInUp col-md-6 col-sm-12" data-wow-delay="0.9s">
 				<div class="blog-thumb">
-					<span class="blog-date">Body Fitness / July 2, 2016</span>
+					<span class="blog-date">The good stuff/ July 2, 2016</span>
 					<h3 class="blog-title"><a href="blog-single.html">How to get a movie ticket?</a></h3>
 					<h5 id="blog-author">by David Walker</h5>
 				</div>
@@ -260,7 +260,7 @@ http://www.templatemo.com/tm-487-fitness
 
 			<div class="wow fadeInUp col-md-6 col-sm-12" data-wow-delay="1.3s">
 				<div class="blog-thumb">
-					<span class="blog-date">Healthy Fit / June 8, 2016</span>
+					<span class="blog-date">food / June 8, 2016</span>
 					<h3 class="blog-title"><a href="blog-single.html">Where are movies playing</a></h3>
 					<h5 id="blog-author">by George</h5>
 				</div>
@@ -301,12 +301,12 @@ http://www.templatemo.com/tm-487-fitness
 
 			<div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="1s">
 				<div class="pricing__item">
-                    <h3 class="pricing__title">Healthy</h3>
+                    <h3 class="pricing__title">Health Film</h3>
                     <div class="pricing__price"><span class="pricing__currency">$</span>350</div>
                     <ul class="pricing__feature-list">
-                        <li class="pricing__feature">One General Trainer</li>
+                        <li class="pricing__feature">General Movie</li>
                         <li class="pricing__feature">Gym Services</li>
-                        <li class="pricing__feature">5 Yoga Courses</li>
+                        <li class="pricing__feature">5 wow </li>
                         <li class="pricing__feature">10 Thai Massages</li>
                         <li class="pricing__feature">15 Aerobics</li>
                     </ul>
@@ -316,13 +316,13 @@ http://www.templatemo.com/tm-487-fitness
 
 			<div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="1.3s">
 				<div class="pricing__item">
-                    <h3 class="pricing__title">Best Fit</h3>
+                    <h3 class="pricing__title">Best</h3>
                     <div class="pricing__price"><span class="pricing__currency">$</span>550</div>                  
                     <ul class="pricing__feature-list">
-                        <li class="pricing__feature">Two General Trainers</li>
+                        <li class="pricing__feature">Two General Tickets</li>
                         <li class="pricing__feature">Gym Services</li>
-                        <li class="pricing__feature">10 Yoga Courses</li>
-                        <li class="pricing__feature">20 Thai Massages</li>
+                        <li class="pricing__feature">10 wow</li>
+                        <li class="pricing__feature">20 Thai Movies</li>
                         <li class="pricing__feature">25 Aerobics</li>
                     </ul>
                     <button class="pricing__action">Sign Up Now</button>
@@ -331,13 +331,13 @@ http://www.templatemo.com/tm-487-fitness
 
 			<div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="1.6s">
 				<div class="pricing__item">
-                    <h3 class="pricing__title">Rigid Body</h3>
+                    <h3 class="pricing__title">Family outing </h3>
                     <div class="pricing__price"><span class="pricing__currency">$</span>750</div> 
                     <ul class="pricing__feature-list">
                         <li class="pricing__feature">Three Personal Trainers</li>
                         <li class="pricing__feature">Gym Services</li>
-                        <li class="pricing__feature">15 Yoga Courses</li>
-                        <li class="pricing__feature">20 Thai Massages</li>
+                        <li class="pricing__feature">15 wow</li>
+                        <li class="pricing__feature">20 Thai Movie</li>
                         <li class="pricing__feature">35 Aerobics</li>
                     </ul>
                    <button class="pricing__action">Sign Up Now</button>
