--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ http://www.templatemo.com/tm-487-fitness
 
 			<div class="wow fadeInUp col-md-6 col-sm-12" data-wow-delay="1.6s">
 				<div class="blog-thumb">
-					<span class="blog-date">Gym Services / May 9, 2016</span>
+					<span class="blog-date">Theater Selection / May 9, 2016</span>
 					<h3 class="blog-title"><a href="blog-single.html">Efficient Workout Plans</a></h3>
 					<h5 id="blog-author">by Mary Louis</h5>
 				</div>
@@ -276,7 +276,7 @@ http://www.templatemo.com/tm-487-fitness
 
 			<div class="wow fadeInUp col-md-6 col-sm-12" data-wow-delay="1.9s">
 				<div class="blog-thumb">
-					<span class="blog-date">Practice Aerobics / April 18, 2016</span>
+					<span class="blog-date">Practice Acting / April 18, 2016</span>
 					<h3 class="blog-title"><a href="blog-single.html">How to practice Aerobics?</a></h3>
 					<h5 id="blog-author">by Michael Fit</h5>
 				</div>
