--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ http://www.templatemo.com/tm-487-fitness
 			<ul class="nav navbar-nav navbar-right main-navigation">
 				<li><a href="#home" class="smoothScroll">Home</a></li>
 				<li><a href="#overview" class="smoothScroll">About</a></li>
-				<li><a href="#Movies" class="smoothScroll">Trainers</a></li>
+				<li><a href="#Movies" class="smoothScroll">Movies</a></li>
 				<li><a href="#blog" class="smoothScroll">Blog</a></li>
 				<li><a href="#price" class="smoothScroll">Prices</a></li>
 				<li><a href="#testimonial" class="smoothScroll">Testimonials</a></li>
