--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 Fitness Template
 http://www.templatemo.com/tm-487-fitness
 -->
-<title>Fitness - Responsive HTML Template</title>
+<title>Responsive HTML Template</title>
 <meta name="description" content="">
 <meta name="author" content="">
 <meta charset="UTF-8">
@@ -305,9 +305,9 @@ http://www.templatemo.com/tm-487-fitness
                     <div class="pricing__price"><span class="pricing__currency">$</span>350</div>
                     <ul class="pricing__feature-list">
                         <li class="pricing__feature">General Movie</li>
-                        <li class="pricing__feature">Gym Services</li>
+                        <li class="pricing__feature"> Services</li>
                         <li class="pricing__feature">5 wow </li>
-                        <li class="pricing__feature">10 Thai Massages</li>
+                        <li class="pricing__feature">10 Thai Film</li>
                         <li class="pricing__feature">15 Aerobics</li>
                     </ul>
                     <button class="pricing__action">Sign Up Now</button>
@@ -320,10 +320,10 @@ http://www.templatemo.com/tm-487-fitness
                     <div class="pricing__price"><span class="pricing__currency">$</span>550</div>                  
                     <ul class="pricing__feature-list">
                         <li class="pricing__feature">Two General Tickets</li>
-                        <li class="pricing__feature">Gym Services</li>
+                        <li class="pricing__feature">Services</li>
                         <li class="pricing__feature">10 wow</li>
                         <li class="pricing__feature">20 Thai Movies</li>
-                        <li class="pricing__feature">25 Aerobics</li>
+                        <li class="pricing__feature">25 Acting</li>
                     </ul>
                     <button class="pricing__action">Sign Up Now</button>
                 </div>
@@ -335,7 +335,7 @@ http://www.templatemo.com/tm-487-fitness
                     <div class="pricing__price"><span class="pricing__currency">$</span>750</div> 
                     <ul class="pricing__feature-list">
                         <li class="pricing__feature">Three Personal Trainers</li>
-                        <li class="pricing__feature">Gym Services</li>
+                        <li class="pricing__feature">Services</li>
                         <li class="pricing__feature">15 wow</li>
                         <li class="pricing__feature">20 Thai Movie</li>
                         <li class="pricing__feature">35 Aerobics</li>
