--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ http://www.templatemo.com/tm-487-fitness
                         <li class="pricing__feature"> Services</li>
                         <li class="pricing__feature">5 wow </li>
                         <li class="pricing__feature">10 Thai Film</li>
-                        <li class="pricing__feature">15 Aerobics</li>
+                        <li class="pricing__feature">15 Acting</li>
                     </ul>
                     <button class="pricing__action">Sign Up Now</button>
                 </div>
@@ -334,11 +334,11 @@ http://www.templatemo.com/tm-487-fitness
                     <h3 class="pricing__title">Family outing </h3>
                     <div class="pricing__price"><span class="pricing__currency">$</span>750</div> 
                     <ul class="pricing__feature-list">
-                        <li class="pricing__feature">Three Personal Trainers</li>
+                        <li class="pricing__feature">Three Tickets</li>
                         <li class="pricing__feature">Services</li>
                         <li class="pricing__feature">15 wow</li>
                         <li class="pricing__feature">20 Thai Movie</li>
-                        <li class="pricing__feature">35 Aerobics</li>
+                        <li class="pricing__feature">35 Actings</li>
                     </ul>
                    <button class="pricing__action">Sign Up Now</button>
                 </div>
