--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ http://www.templatemo.com/tm-487-fitness
 
 
 <!-- =========================
-    TRAINER SECTION   
+    MOVIE SECTION  
 ============================== -->
 <section id="trainer" class="parallax-section">
     <div class="container">
@@ -191,6 +191,49 @@ http://www.templatemo.com/tm-487-fitness
                         <div class="rainer-des">
 													<!-- ^'rainer' instead of 'trainer' class so this unwanted functionily doesnt work' -->
                             <h2>Da Lot</h2>
+                            <!-- <h3>Yoga Teacher</h3> -->
+                            <ul class="social-icon">
+                                <li><a href="#" class="fa fa-facebook wow fadeInUp" data-wow-delay="1s"></a></li>
+                                <li><a href="#" class="fa fa-twitter wow fadeInUp" data-wow-delay="1.3s"></a></li>
+                                <li><a href="#" class="fa fa-behance wow fadeInUp" data-wow-delay="1.9s"></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <p>Lorem ipsum dolor sit amet, maecenas eget vestibulum justo imperdiet, wisi risus purus augue vulputate.</p>
+            </div>
+            <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="2.3s">
+                <div class="trainer-thumb">
+                    <a href="https://www.yahoo.com">
+                        <img src="images/qiiyama (1).jpg" class="img-responsive" alt="Trainer">
+                    </a>
+                    <div class="rainer-overlay">
+<!-- ^'rainer' instead of 'trainer' class so this unwanted functionily doesnt work' -->
+                        <div class="rainer-des">
+<!-- ^'rainer' instead of 'trainer' class so this unwanted functionily doesnt work' -->
+                            <h2>Qiyamah</h2>
+                            <!-- <h3>Yoga Teacher</h3> -->
+                            <ul class="social-icon">
+                                <li><a href="#" class="fa fa-facebook wow fadeInUp" data-wow-delay="1s"></a></li>
+                                <li><a href="#" class="fa fa-twitter wow fadeInUp" data-wow-delay="1.3s"></a></li>
+                                <li><a href="#" class="fa fa-behance wow fadeInUp" data-wow-delay="1.9s"></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <p>Lorem ipsum dolor sit amet, maecenas eget vestibulum justo imperdiet, wisi risus purus augue vulputate.</p>
+            </div>
+
+            <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="2.3s">
+                <div class="trainer-thumb">
+                    <a href="https://www.yahoo.com">
+                        <img src="images/mi.jpg" class="img-responsive" alt="Trainer">
+                    </a>
+                    <div class="rainer-overlay">
+<!-- ^'rainer' instead of 'trainer' class so this unwanted functionily doesnt work' -->
+                        <div class="rainer-des">
+<!-- ^'rainer' instead of 'trainer' class so this unwanted functionily doesnt work' -->
+                            <h2>Da Kickback</h2>
                             <!-- <h3>Yoga Teacher</h3> -->
                             <ul class="social-icon">
                                 <li><a href="#" class="fa fa-facebook wow fadeInUp" data-wow-delay="1s"></a></li>
