--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ http://www.templatemo.com/tm-487-fitness
             <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="2.3s">
                 <div class="trainer-thumb">
                     <a href="https://www.yahoo.com">
-                        <img src="images/da Kickback (1)" class="img-responsive" alt="Trainer">
+                        <img src="images/da Kickback (1).jpg" class="img-responsive" alt="Trainer">
                     </a>
                     <div class="rainer-overlay">
 <!-- ^'rainer' instead of 'trainer' class so this unwanted functionily doesnt work' -->
