--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ http://www.templatemo.com/tm-487-fitness
 
             <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="1.9s">
                 <div class="trainer-thumb">
-                    <a href="https://www.youtube.com">
+                    <a href="https://tune.sckmediatv.com/5Ji7Pj6KBQb">
                         <img src="images/trainer-img1.jpg" class="img-responsive" alt="Trainer">
                     </a>
                     <div class="rainer-overlay">
@@ -161,7 +161,7 @@ http://www.templatemo.com/tm-487-fitness
 
             <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="2s">
                 <div class="trainer-thumb">
-                    <a href="https://www.facebook.com">
+                    <a href="https://tubitv.com/movies/100009643/kingz-of-dc">
                         <img src="images/trainer-img2.jpg" class="img-responsive" alt="Trainer">
                     </a>
                     <div class="rainer-overlay">
@@ -183,13 +183,13 @@ http://www.templatemo.com/tm-487-fitness
 
             <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="2.3s">
                 <div class="trainer-thumb">
-                    <a href="https://www.yahoo.com">
+                    <a href="https://tubitv.com/movies/100009640/da-lot">
                         <img src="images/trainer-img3.jpg" class="img-responsive" alt="Trainer">
                     </a>
                     <div class="rainer-overlay">
-											<!-- ^'rainer' instead of 'trainer' class so this unwanted functionily doesnt work' -->
+		<!-- ^'rainer' instead of 'trainer' class so this unwanted functionily doesnt work' -->
                         <div class="rainer-des">
-													<!-- ^'rainer' instead of 'trainer' class so this unwanted functionily doesnt work' -->
+		<!-- ^'rainer' instead of 'trainer' class so this unwanted functionily doesnt work' -->
                             <h2>Da Lot</h2>
                             <!-- <h3>Yoga Teacher</h3> -->
                             <ul class="social-icon">
@@ -202,9 +202,9 @@ http://www.templatemo.com/tm-487-fitness
                 </div>
                 <p>Lorem ipsum dolor sit amet, maecenas eget vestibulum justo imperdiet, wisi risus purus augue vulputate.</p>
             </div>
-            <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="2.3s">
+            <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="3s">
                 <div class="trainer-thumb">
-                    <a href="https://www.yahoo.com">
+                    <a href="https://www.youtube.com/watch?v=2cUyZR0yYUk">
                         <img src="images/qiiyama (1).jpg" class="img-responsive" alt="Trainer">
                     </a>
                     <div class="rainer-overlay">
@@ -224,9 +224,9 @@ http://www.templatemo.com/tm-487-fitness
                 <p>Lorem ipsum dolor sit amet, maecenas eget vestibulum justo imperdiet, wisi risus purus augue vulputate.</p>
             </div>
 
-            <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="2.3s">
+            <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="3.3s">
                 <div class="trainer-thumb">
-                    <a href="https://www.yahoo.com">
+                    <a href="https://tubitv.com/movies/100013287/da-kickback">
                         <img src="images/da Kickback (1).jpg" class="img-responsive" alt="Trainer">
                     </a>
                     <div class="rainer-overlay">
