--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ http://www.templatemo.com/tm-487-fitness
 			<div class="wow fadeInUp col-md-6 col-sm-12" data-wow-delay="0.9s">
 				<div class="blog-thumb">
 					<span class="blog-date">The good stuff/ July 2, 2016</span>
-					<h3 class="blog-title"><a href="blog-single.html">How to get a movie ticket?</a></h3>
+					<h3 class="blog-title"><a href="#">How to get a movie ticket?</a></h3>
 					<h5 id="blog-author">by David Walker</h5>
 				</div>
 			</div>
@@ -304,7 +304,7 @@ http://www.templatemo.com/tm-487-fitness
 			<div class="wow fadeInUp col-md-6 col-sm-12" data-wow-delay="1.3s">
 				<div class="blog-thumb">
 					<span class="blog-date">food / June 8, 2016</span>
-					<h3 class="blog-title"><a href="blog-single.html">Where are movies playing</a></h3>
+					<h3 class="blog-title"><a href="#">Where are movies playing</a></h3>
 					<h5 id="blog-author">by George</h5>
 				</div>
 			</div>
@@ -312,7 +312,7 @@ http://www.templatemo.com/tm-487-fitness
 			<div class="wow fadeInUp col-md-6 col-sm-12" data-wow-delay="1.6s">
 				<div class="blog-thumb">
 					<span class="blog-date">Theater Selection / May 9, 2016</span>
-					<h3 class="blog-title"><a href="blog-single.html">Box Office</a></h3>
+					<h3 class="blog-title"><a href="#">Box Office</a></h3>
 					<h5 id="blog-author">by Mary Louis</h5>
 				</div>
 			</div>
@@ -320,7 +320,7 @@ http://www.templatemo.com/tm-487-fitness
 			<div class="wow fadeInUp col-md-6 col-sm-12" data-wow-delay="1.9s">
 				<div class="blog-thumb">
 					<span class="blog-date">Practice Acting / April 18, 2016</span>
-					<h3 class="blog-title"><a href="blog-single.html">How to practice Acting?</a></h3>
+					<h3 class="blog-title"><a href="#">How to practice Acting?</a></h3>
 					<h5 id="blog-author">by Michael Fit</h5>
 				</div>
 			</div>
