--- a/index.html
+++ b/index.html
@@ -204,8 +204,7 @@ http://www.templatemo.com/tm-487-fitness
 
 			<div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="1.9s">
 				<div class="trainer-thumb">
-					<video src="images/NEW BALAN.mp4" class="img-responsive" controls>
-				</video>
+					<video src="images/NEW BALANCE BOYZ TRAILER .mp4" controls poster="images/newBalance.jpg" style="width: 474px; height: 592px; object-fit: fill;"></video>
 						<div class="trainer-overlay">
 							<div class="trainer-des">
 								<ul class="td">
