--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ http://www.templatemo.com/tm-487-fitness
 						</div>
 					</div>
 			</div>
-			<p>Lorem ipsum dolor sit amet, maecenas eget vestibulum justo imperdiet, wisi risus purus augue vulputate.</p>
+			<p>The ruthless story of three young kingz without crowns who take over the violent streets of the nation’s capital while trying to outrun the Feds.</p>
 		</div>
 			<div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="2s">
 				<div class="trainer-thumb">
@@ -186,7 +186,7 @@ http://www.templatemo.com/tm-487-fitness
 							</div>
 						</div>
 				</div>
-				<p>Lorem ipsum dolor sit amet, maecenas eget vestibulum justo imperdiet, wisi risus purus augue vulputate.</p>
+				<p>Have you ever parked your car, and when you returned, it wasn't there? You look two or three times, but it's not parked there. It’s at the Da Lot.</p>
 			</div>
 
 		</div>
@@ -234,7 +234,7 @@ http://www.templatemo.com/tm-487-fitness
 							</div>
 						</div>
 				</div>
-				<p>Lorem ipsum dolor sit amet, maecenas eget vestibulum justo imperdiet, wisi risus purus augue vulputate.</p>
+				<p>"Indeed, Allah [alone] has knowledge of the Hour ⏳ and sends down the rain ⛈and knows what is in the wombs🤰. And no soul perceives what it will earn💰 tomorrow📆, and no soul perceives in what land🏜 it will die☠. Indeed, Allah is Knowing and Acquainted." ~Holy Quran 31;34 📖 Y'all Get Ready For Yamul Al Qiyamah? The Movie?</p>
 			</div>
 
 			<div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="2.3s">
@@ -252,7 +252,7 @@ http://www.templatemo.com/tm-487-fitness
 							</div>
 						</div>
 				</div>
-				<p>Lorem ipsum dolor sit amet, maecenas eget vestibulum justo imperdiet, wisi risus purus augue vulputate.</p>
+				<p>This film is a hilarious, riotously funny, DMV-based comedy about two friends dealing with all of life’s crazy issues.</p>
 			</div>
 
 		</div>
