--- a/index.html
+++ b/index.html
@@ -271,7 +271,6 @@ http://www.templatemo.com/tm-487-fitness
 
 			<div class="wow fadeInUp col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10" data-wow-delay="0.9s">
 				<h2>WWP Newsletter Signup</h2>
-				<p>Get discounts for your personal fitness and gym services now.</p>
 				<div class="newsletter_detail">
 					<form action="#" method="post" id="newsletter-signup">
 						<div class="col-md-6 col-sm-6">
@@ -470,22 +469,24 @@ http://www.templatemo.com/tm-487-fitness
 			</div>
 
 			<div class="wow fadeInUp col-md-3 col-sm-4" data-wow-delay="1s">
-				<h2>Follow us</h2>
+				<div class="ring"><h2>Follow us</h2></div>
 				<ul class="social-icon">
-					<li><a href="#" class="fa fa-facebook wow fadeIn" data-wow-delay="1s"></a></li>
-					<li><a href="#" class="fa fa-twitter wow fadeInUp" data-wow-delay="1.3s"></a></li>
-					<li><a href="#" class="fa fa-instagram wow fadeIn" data-wow-delay="1.6s"></a></li>
-					<li><a href="#" class="fa fa-tiktok wow fadeInUp" data-wow-delay="1.9s"></a></li>
+					<li><a href="https://www.facebook.com/people/worldwarpolo/100071674871039/?locale=en_GB" class="fa fa-facebook wow fadeIn" data-wow-delay="1s"></a></li>
+					<li><a href="https://x.com/i/flow/login?redirect_after_login=%2Fking_polo_bear" class="fa fa-twitter wow fadeInUp" data-wow-delay="1.3s"></a></li>
+					<li><a href="https://www.instagram.com/worldwarpolo/?hl=en" class="fa fa-instagram wow fadeIn" data-wow-delay="1.6s"></a></li>
+					<li><a href="https://www.tiktok.com/tag/worldwarpolo" class="fa fa-tiktok wow fadeInUp" data-wow-delay="1.9s"></a></li>
+					<li><a href="https://www.threads.net/@worldwarpolo" class="fa-brands fa-threads wow fadeInUp" data-wow-delay="1.9s"></a></li>
+					<li><a href="https://www.youtube.com/@worldwarpolo" class="fa fa-youtube wow fadeInUp" data-wow-delay="1.9s"></a></li>
 				</ul>
 			</div>
 
 			<div class="clearfix"></div>
 
-			<div class="col-md-12 col-sm-12">
+			<!-- <div class="col-md-12 col-sm-12">
 				<p class="copyright-text">Copyright &copy; 2016 Your Company 
                     
                     | Design: <a rel="nofollow" href="http://www.templatemo.com/page/1" target="_parent">Templatemo</a></p>
-			</div>
+			</div> -->
 			
 		</div>
 	</div>
