--- a/index.html
+++ b/index.html
@@ -179,9 +179,9 @@ http://www.templatemo.com/tm-487-fitness
 						<div class="trainer-overlay">
 							<div class="trainer-des">
 								<ul class="td">
-									<li class="wow fadeInUp" data-wow-delay="1.2s"><h2>DA</h2></li>
+									<li class="wow fadeInUp" data-wow-delay="1s"><h2>DA</h2></li>
 									<li class="wow fadeInUp" data-wow-delay="1s"><h2> </h2></li>
-									<li class="wow fadeInUp" data-wow-delay="1.6s"><h2>LOT</h2></li>
+									<li class="wow fadeInUp" data-wow-delay="1.7s"><h2>LOT</h2></li>
 							</ul>
 							</div>
 						</div>
@@ -272,7 +272,7 @@ http://www.templatemo.com/tm-487-fitness
 			<div class="wow fadeInUp col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10" data-wow-delay="0.9s">
 				<h2>WWP Newsletter Signup</h2>
 				<div class="newsletter_detail">
-					<form action="#" method="post" id="newsletter-signup">
+					<form action="https://formspree.io/f/mwplekej" method="post" id="newsletter-signup">
 						<div class="col-md-6 col-sm-6">
 							<input name="name" type="text" class="form-control" id="name" placeholder="Name">
 					  	</div>
@@ -290,6 +290,26 @@ http://www.templatemo.com/tm-487-fitness
 	</div>
 </section>
 
+<!-- Contact form where visitors will input their information -->
+<!-- <form action="https://formspree.io/f/mwplekej" method="POST">
+    <div class="form-group">
+    <label for="name">Name</label>
+    <input type="text" id="name" name="name" required />
+    </div><br><br>
+
+    <label for="email">Your Email:</label>
+    <input type="email" id="email" name="email" required><br><br>
+
+    <label for="subject">Subject:</label>  <- Changed label from "Name" to "Subject" -->
+    <!-- <input type="text" id="subject" name="subject" required><br><br> -->
+<!-- 
+    <label for="message">Donation type or any other issue:</label><br>
+    <textarea id="message" name="message" rows="4" required></textarea><br><br> -->
+
+    <!-- <button type="submit">Send Message</button> -->
+  <!-- </form> -->
+
+  <!-- <p id="form-status"></p> -->
 
 <!-- =========================
     BLOG SECTION   
@@ -404,13 +424,13 @@ http://www.templatemo.com/tm-487-fitness
 
 <!-- =========================
     TESTIMONIAL SECTION   
-============================== -->
+============================== 
 <section id="testimonial" class="parallax-section">
-	<div class="container">
+	 <div class="container">
 		<div class="row">
 
-			<!-- Testimonial Owl Carousel section
-			================================================== -->
+			< Testimonial Owl Carousel section
+			================================================== 
 			<div id="owl-testimonial" class="owl-carousel">
 
 				<div class="item col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 wow fadeInUp" data-wow-delay="0.6s">
@@ -441,7 +461,8 @@ http://www.templatemo.com/tm-487-fitness
 
 		</div>
 	</div>
-</section>
+</section> -->
+
 
 
 <!-- =========================
