--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ http://www.templatemo.com/tm-487-fitness
 							<input name="email" type="email" class="form-control" id="email" placeholder="Email">
 					  	</div>
 						<div class="col-md-offset-3 col-md-6 col-sm-offset-2 col-sm-8">
-							<input name="submit" type="submit" class="form-control" id="submit" value="SEND MESSAGE">
+							<input name="submit" type="submit" class="form-control" id="submit" value="SUBMIT">
 						</div>
 				  	</form>
 				</div>
