--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@ http://www.templatemo.com/tm-487-fitness
 				<p>Nunc id turpis tincidunt dui volutpat hendrerit et efficitur dolor. Morbi quis tempor felis, ut dictum ipsum. Praesent venenatis rutrum interdum.</p>
 			</div>
 
-			<div class="wow fadeInUp col-md-5 col-sm-4"  data-wow-delay="0.9s">
+<!-- 			<div class="wow fadeInUp col-md-5 col-sm-4"  data-wow-delay="0.9s">
 				<h2>SHOWINGS</h2>
 					<div>
 						<h5>Morning</h5>
@@ -487,7 +487,7 @@ http://www.templatemo.com/tm-487-fitness
 						<h5>Evening</h5>
 						<h4>4:00 PM - 9:00 PM</h4>
 					</div>
-			</div>
+			</div> -->
 
 			<div class="wow fadeInUp col-md-3 col-sm-4" data-wow-delay="1s">
 				<div class="ring"><h2>Follow us</h2></div>
