--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ http://www.templatemo.com/tm-487-fitness
 				<li><a href="#overview" class="smoothScroll">About</a></li>
 				<li><a href="#movies" class="smoothScroll">Movies</a></li>
 				<li><a href="#newsletter" class="smoothScroll">Newsletter</a></li>
-				<li><a href="#testimonial" class="smoothScroll">Testimonials</a></li>
+<!-- 				<li><a href="#testimonial" class="smoothScroll">Testimonials</a></li> -->
 			</ul>
 		</div>
 
@@ -476,7 +476,8 @@ http://www.templatemo.com/tm-487-fitness
 				<h2>About POLO</h2>
 				<p>Nunc id turpis tincidunt dui volutpat hendrerit et efficitur dolor. Morbi quis tempor felis, ut dictum ipsum. Praesent venenatis rutrum interdum.</p>
 			</div>
-
+<br>
+<br>
 <!-- 			<div class="wow fadeInUp col-md-5 col-sm-4"  data-wow-delay="0.9s">
 				<h2>SHOWINGS</h2>
 					<div>
@@ -488,6 +489,8 @@ http://www.templatemo.com/tm-487-fitness
 						<h4>4:00 PM - 9:00 PM</h4>
 					</div>
 			</div> -->
+<br>
+<br>
 
 			<div class="wow fadeInUp col-md-3 col-sm-4" data-wow-delay="1s">
 				<div class="ring"><h2>Follow us</h2></div>
