--- a/index.html
+++ b/index.html
@@ -478,8 +478,8 @@ http://www.templatemo.com/tm-487-fitness
 			</div>
 <br>
 <br>
-<!-- 			<div class="wow fadeInUp col-md-5 col-sm-4"  data-wow-delay="0.9s">
-				<h2>SHOWINGS</h2>
+			<div class="wow fadeInUp col-md-5 col-sm-4"  data-wow-delay="0.9s">
+<!-- 				<h2>SHOWINGS</h2>
 					<div>
 						<h5>Morning</h5>
 						<h4>6:00 AM - 11:00 PM</h4>
@@ -487,10 +487,9 @@ http://www.templatemo.com/tm-487-fitness
 					<div>
 						<h5>Evening</h5>
 						<h4>4:00 PM - 9:00 PM</h4>
-					</div>
-			</div> -->
-<br>
-<br>
+					</div> -->
+			</div>
+
 
 			<div class="wow fadeInUp col-md-3 col-sm-4" data-wow-delay="1s">
 				<div class="ring"><h2>Follow us</h2></div>
